--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header class="header">
         <h1>Bonnie's Portfolio</h1>
-        <nav class="float-right">
-            <div>
+        <nav>
+            <div class="example">
                 <ul>
                     <li>
-                        <a href="#projects-before-bootcamp">Projects before Bootcamp</a>
+                        <a href="#about-Me">About Me</a>
                     </li>
                     <li>
                         <a href="#another-project-before-bootcamp"> Another project before bootcamp </a>
@@ -28,13 +28,17 @@
     </header>
     <div class="divcontainer">
         <section class=" content">
-            <article id="projects-before-bootcamp" class="projects-before-bootcamp">
-                <img src="./Assets/image1.png" alt="Google Chrome clone project" class="float-left" />
-                <h2>Google Chrome clone project</h2>
+            <article id="about-Me" class="about-Me">
+                <img src="./Assets/IMG_8767.png" alt="Image of Bonnie Reed" class="float-left">
+                <h2>About Me</h2>
                 <p>
-                    This is an example of a Google Chrome clone project. I wrote the HTML and CSS from scratch with
-                    basic
-                    HTML and flexbox within CSS.
+                    I started my journey through adulthood by becoming a cosmetologist.
+                    I worked in a salon for several years and eventually wanted to challenge
+                    myself with a career change.
+                    I studied for the Comptia A+ Cert and started my tech job search.
+                    I have been in IT support for 5 years. I have wanted to branch out further
+                    and have a firm grasp on full stack web development which is what brought me
+                    to the SMU bootcamp.
                 </p>
             </article>
             <article id="another-project-before-bootcamp" class="another-project-before-bootcamp">
