Changed page layout and added flex to sections

--- a/index.html
+++ b/index.html
@@ -8,65 +8,71 @@
 </head>
 
 <body>
-    <header class="header">
-        <h1>Bonnie's Portfolio</h1>
-        <nav>
-            <div class="example">
-                <ul>
-                    <li>
-                        <a href="#about-Me">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#another-project-before-bootcamp"> Another project before bootcamp </a>
-                    </li>
-                    <li>
-                        <a href="#first-homework-assignment"> First homework assignment </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <div class="divcontainer">
-        <section class=" content">
-            <article id="about-Me" class="about-Me">
-                <img src="./Assets/IMG_8767.png" alt="Image of Bonnie Reed" class="float-left">
-                <h2>About Me</h2>
-                <p>
-                    I started my journey through adulthood by becoming a cosmetologist.
-                    I worked in a salon for several years and eventually wanted to challenge
-                    myself with a career change.
-                    I studied for the Comptia A+ Cert and started my tech job search.
-                    I have been in IT support for 5 years. I have wanted to branch out further
-                    and have a firm grasp on full stack web development which is what brought me
-                    to the SMU bootcamp.
-                </p>
-            </article>
-            <article id="another-project-before-bootcamp" class="another-project-before-bootcamp">
-                <img src="./Assets/image2.png" alt="Photo gallery project examp" class="float-right" />
-                <h2>Image Gallery Project</h2>
-                <p>
-                    The image gallery project was made with Basic HTML and CSS.
-                </p>
-            </article>
-            <article id="first-homework-assignment" class="first-homework-assignment">
-                <img src="./Assets/image3.png" alt="Search engine optimization project example" class="float-left" />
-                <h2>Social Media Marketing Project</h2>
-                <p>
-                    This project was made to have Search Engine Optimization in mind when created. The HTML includes
-                    semantic tags and alt tags for accessibility.
-                </p>
-            </article>
-        </section>
+    <div class="container">
+        <header class="header">
+            <h1>Bonnie's Portfolio</h1>
+            <nav>
+                <div class="example">
+                    <ul>
+                        <li>
+                            <a href="#about-Me">About Me</a>
+                        </li>
+                        <li>
+                            <a href="#another-project-before-bootcamp"> Another project before bootcamp </a>
+                        </li>
+                        <li>
+                            <a href="#first-homework-assignment"> First homework assignment </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <div class="divcontainer">
+            <section class=" content">
+                <article id="about-Me" class="about-Me">
+
+                    <h2>About Me</h2>
+
+                    <p>
+                        I started my journey through adulthood by becoming a cosmetologist.
+                        I worked in a salon for several years and eventually wanted to challenge
+                        myself with a career change.
+                        I studied for the Comptia A+ Cert and started my tech job search.
+                        I have been in IT support for 5 years. I have wanted to branch out further
+                        and have a firm grasp on full stack web development which is what brought me
+                        to the SMU bootcamp.
+                    </p>
+                </article>
+                <article id="another-project-before-bootcamp" class="another-project-before-bootcamp">
+                    <h2>Image Gallery Project</h2>
+                    <p>
+                        The image gallery project was made with Basic HTML and CSS.
+                    </p>
+                    <img src="./Assets/image1.png" alt="Photo gallery project examp" class="float-right" />
+                    <img src="./Assets/image2.png" alt="Photo gallery project examp" class="float-right" />
+                </article>
+                <article id="first-homework-assignment" class="first-homework-assignment">
+                    <h2>Social Media Marketing Project</h2>
+                    <p>
+                        This project was made to have Search Engine Optimization in mind when created. The HTML includes
+                        semantic tags and alt tags for accessibility.
+                    </p>
+                    <img src="./Assets/image3.png" alt="Search engine optimization project example" />
+                </article>
+            </section>
+        </div>
+        <footer class="footer">
+            <h2>Made with ❤️️ by Bonnie Reed</h2>
+            <p>
+                &copy; Spudworx
+            </p>
+            <p>
+                <a href="https://github.com/bonniereed">Github Page</a>
+                <br>
+                <a href="bonniejeanreed@gmail.com">Drop a line</a>
+            </p>
+        </footer>
     </div>
-    <footer class="footer">
-        <h2>Made with ❤️️ by Bonnie Reed</h2>
-        <p>
-            &copy; Spudworx
-        </p>
-        <p>
-            <a href="https://bonniereed.github.io/SMUhomeworkHTMLGitCSS02/">Github Page</a>
-        </p>
-    </footer>
 </body>
 
 </html>
