Corrected screenshot with current styles and changed size of projet images.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                             Here are some examples of previous projects I have worked on:
                         </p>
                         <div class="fts">
-                            <a href="https://bonniereed.github.io/googleClone/"><img src="./Assets/image1.png"
+                            <a class="largerImage" href="https://bonniereed.github.io/googleClone/"><img src="./Assets/image1.png"
                                     alt="Google Chrome clone example" /></a>
-                            <a href="https://bonniereed.github.io/SMUhomeworkHTMLGitCSS02/"><img
+                            <a class="smallerImage"href="https://bonniereed.github.io/SMUhomeworkHTMLGitCSS02/"><img
                                     src="./Assets/image3.png" alt="Search engine optimization project example" /></a>
                         </div>
                     </div>
