--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                                     alt="Google Chrome clone example" /></a>
                             <a class="smallerImage"href="https://bonniereed.github.io/SMUhomeworkHTMLGitCSS02/"><img
                                     src="./Assets/image3.png" alt="Search engine optimization project example" /></a>
+                            <a class="smallerImage"href="https://bonniereed.github.io/websiteFirst/"><img
+                                    src="./Assets/image2.png" alt="Search engine optimization project example" /></a>
+                            <a class="smallerImage"href="https://bonniereed.github.io/my-travel-plans/"><img
+                                    src="./Assets/image4.png" alt="Search engine optimization project example" /></a>
                         </div>
                     </div>
                 </article>
